# trocr_ru_handwritten_finetuning

./: .pre-commit-config.yaml  README.md  cli.py  environment.yml  pyproject.toml  tasks.py
models/: models.py
trocr_russian_handwritten_text/: __init__.py  config.py  dataset.py  features.py  plots.py
trocr_russian_handwritten_text/modeling/: make_dataset.py  predict.py  train.py
